test_outputs/connlist/anp_and_banp_using_networks_and_nodes_test_connlist_output.txt
0.0.0.0-255.255.255.255 => ns1/pod1[Deployment] : All Connections
0.0.0.0-255.255.255.255 => ns2/pod1[Deployment] : All Connections
0.0.0.0-255.255.255.255 => ns3/pod1[Deployment] : All Connections
ns1/pod1[Deployment] => 0.0.0.0-104.154.164.159 : All Connections
ns1/pod1[Deployment] => 104.154.164.161-104.154.164.169 : All Connections
ns1/pod1[Deployment] => 104.154.164.170-104.154.164.170 : All Connections
ns1/pod1[Deployment] => 104.154.164.171-255.255.255.255 : All Connections
ns1/pod1[Deployment] => ns3/pod1[Deployment] : All Connections
ns2/pod1[Deployment] => 0.0.0.0-104.154.164.159 : All Connections
ns2/pod1[Deployment] => 104.154.164.160-104.154.164.160 : All Connections
ns2/pod1[Deployment] => 104.154.164.161-104.154.164.169 : All Connections
ns2/pod1[Deployment] => 104.154.164.170-104.154.164.170 : All Connections
ns2/pod1[Deployment] => 104.154.164.171-255.255.255.255 : All Connections
ns2/pod1[Deployment] => ns1/pod1[Deployment] : All Connections
ns2/pod1[Deployment] => ns3/pod1[Deployment] : All Connections
ns3/pod1[Deployment] => 0.0.0.0-104.154.164.159 : All Connections
ns3/pod1[Deployment] => 104.154.164.160-104.154.164.160 : All Connections
ns3/pod1[Deployment] => 104.154.164.161-104.154.164.169 : All Connections
ns3/pod1[Deployment] => 104.154.164.170-104.154.164.170 : All Connections
ns3/pod1[Deployment] => 104.154.164.171-255.255.255.255 : All Connections
ns3/pod1[Deployment] => ns1/pod1[Deployment] : All Connections
ns3/pod1[Deployment] => ns2/pod1[Deployment] : All Connections
