test_outputs/connlist/anp_and_banp_using_networks_and_nodes_test_explain_output.txt
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ns1/pod1[Deployment] => 104.154.164.160-104.154.164.160:

No Connections due to the following policies//rules:
	EGRESS DIRECTION (DENIED)
		1) [ANP] egress-peer-1//Egress rule deny-egress (Deny)
	INGRESS DIRECTION (ALLOWED) due to the assumed default for IPblock (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ns1/pod1[Deployment] => 104.154.164.170-104.154.164.170:

All Connections due to the following policies//rules:
	EGRESS DIRECTION (ALLOWED)
		1) [ANP] egress-peer-1//Egress rule allow-egress (Allow)
	INGRESS DIRECTION (ALLOWED) due to the assumed default for IPblock (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ns1/pod1[Deployment] => ns2/pod1[Deployment]:

No Connections due to the following policies//rules:
	EGRESS DIRECTION (DENIED)
		1) [ANP] egress-peer-1//Egress rule deny-egress (Deny)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN ns1/pod1[Deployment] => ns3/pod1[Deployment]:

All Connections due to the following policies//rules:
	EGRESS DIRECTION (ALLOWED)
		1) [ANP] egress-peer-1//Egress rule allow-egress (Allow)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
The following nodes are connected due to the system default or the assumed default for IPblock (Allow all):
0.0.0.0-255.255.255.255 => ns1/pod1[Deployment]
0.0.0.0-255.255.255.255 => ns2/pod1[Deployment]
0.0.0.0-255.255.255.255 => ns3/pod1[Deployment]
ns1/pod1[Deployment] => 0.0.0.0-104.154.164.159
ns1/pod1[Deployment] => 104.154.164.161-104.154.164.169
ns1/pod1[Deployment] => 104.154.164.171-255.255.255.255
ns2/pod1[Deployment] => 0.0.0.0-104.154.164.159
ns2/pod1[Deployment] => 104.154.164.160-104.154.164.160
ns2/pod1[Deployment] => 104.154.164.161-104.154.164.169
ns2/pod1[Deployment] => 104.154.164.170-104.154.164.170
ns2/pod1[Deployment] => 104.154.164.171-255.255.255.255
ns2/pod1[Deployment] => ns1/pod1[Deployment]
ns2/pod1[Deployment] => ns3/pod1[Deployment]
ns3/pod1[Deployment] => 0.0.0.0-104.154.164.159
ns3/pod1[Deployment] => 104.154.164.160-104.154.164.160
ns3/pod1[Deployment] => 104.154.164.161-104.154.164.169
ns3/pod1[Deployment] => 104.154.164.170-104.154.164.170
ns3/pod1[Deployment] => 104.154.164.171-255.255.255.255
ns3/pod1[Deployment] => ns1/pod1[Deployment]
ns3/pod1[Deployment] => ns2/pod1[Deployment]
